change path to js

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- /content -->
 
     <!-- demo -->
-    <script src="public/bundle.js"></script>
+    <script src="dist/bundle.js"></script>
     <!-- /demo -->
 
 </body>
